--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,4 +15,6 @@ layout: default
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
+  
+  <!--{% include disqus_comments.html %}-->
 </article>
