--- a/_layouts/categoria.html
+++ b/_layouts/categoria.html
@@ -1,14 +1,25 @@
 ---
-layout: page
+layout: default
 ---
 
 <div class="categoria">
 
+  <h1 class="page-heading">{{ page.title }}</h1>
+  
   {{ content }}
 
-  <ul class="lista-posts">
-    {% for post in site.posts %}
-    	{{ page.categories }}
-    {% endfor %}
-  </ul>
+  {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}
+
+  {% for category in site.categories %}
+    <h3>{{ category | first }}</h3>
+    {% for post in page.categories.category %}
+      {{ post.title }}
+    {% endfor %}            
+  {% endfor %}
+
+  {% include disqus_comments.html %}
+  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+
 </div>
