--- a/_layouts/categoria.html
+++ b/_layouts/categoria.html
@@ -9,17 +9,13 @@ layout: default
   {{ content }}
 
   {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &nbsp; <a href="{{ post.url }}">{{ post.title }}</a></li>
+	{% if post.category == page.category_name %}
+	  <ul>
+	    <li>{{ post.title }} , {{ post.categories }}</li>
+	  </ul>
+	{% endif %}
   {% endfor %}
-
-  {% for category in site.categories %}
-    <h3>{{ category | first }}</h3>
-    {% for post in page.categories.category %}
-      {{ post.title }}
-    {% endfor %}            
-  {% endfor %}
-
-  {% include disqus_comments.html %}
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
+  
+  {{ page.category_name }}<br/>
+  {{ site.categories }}
 </div>
