--- a/_layouts/categoria.html
+++ b/_layouts/categoria.html
@@ -16,6 +16,9 @@ layout: default
 	{% endif %}
   {% endfor %}
   
+  {% assign minus = page.title %}
+
+  {{ minus }}<br/>
   {{ page.category_name }}<br/>
   {{ site.categories }}
 </div>
