--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,23 @@ layout: default
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
-  
-  <!--{% include disqus_comments.html %}-->
+
+  <h2>Posts recomendados</h2>
+ 
+  {% assign count = 0 %}
+  {% for post in site.posts %}
+    {% if post.title != page.title %}
+      {% assign count = count | plus:1 %}
+      <li>
+        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+        <h2>
+          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+        </h2>
+      </li>
+    {% endif %}
+    {% if count == 3 %}
+      {% break %}
+    {% endif %}
+  {% endfor %}
+
 </article>
