--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,8 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
+  
+  {% include post-tags.html %}
 
   <h2>Últimos posts publicados</h2>
  
