--- a/assets/main.scss
+++ b/assets/main.scss
@@ -37,3 +37,8 @@ $on-laptop:        800px;
 
 // Import partials from the `minima` theme.
 @import "minima";
+
+#autor_fecha_post {
+  margin-left: 70%;
+}
+
