--- a/_layouts/categoria.html
+++ b/_layouts/categoria.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+excerpt_separator: <!--more-->
 ---
 
 <div class="categoria">
@@ -16,6 +17,7 @@ layout: default
           <h2>
             <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
           </h2>
+	  {{ post.excerpt }}
         </li>
       {% endif %}
     {% endfor %}
