--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -2,12 +2,20 @@
 layout: default
 ---
 <h1>Tag Cloud</h1>
-{% assign tags = site.tags | sort %}
-{% for tag in tags %}
- <span class="site-tag">
-    <a href="/tag/{{ tag | first | slugify }}/"
-        style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">
-            {{ tag[0] | replace:'-', ' ' }} • ({{ tag | last | size }})
-    </a>
-</span>
-{% endfor %}
+
+<div class="tags-postlist">
+  {% assign tags = site.tags | sort %}
+  {% for tag in tags %}
+    <h2 id="{{ tag[0] }}">{{ tag[0] }}({{ tag | last | size }})</h2>
+    <ul>
+      {% for post in tag[1] %}
+        <a class="tag-post" href="{{ site.baseurl }}{{ post.url }}">
+          <li>
+            {{ post.title }}
+            <small class="post-date">{{ post.date | date_to_string }}</small>
+          </li>
+        </a>
+      {% endfor %}
+    </ul>
+  {% endfor %}
+</div>
