--- a/assets/main.scss
+++ b/assets/main.scss
@@ -47,4 +47,14 @@ $on-laptop:        800px;
     margin-right: 12px;
 }
 
+#lista_posts_categoria {
+  margin-top: 30px;
+}
 
+#icono_github {
+  margin-right: 10px;
+}
+
+#icono_facebook {
+  margin-right: 10px;
+}
