--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -15,7 +15,7 @@ layout: default
       cliquem els links dels tags ens redirigeixi al punt exacte d'aquesta
       pàgina on es troba el tag
     {% endcomment %}
-    <h2 id="{{ tag[0] }}">{{ tag[0] }}({{ tag | last | size }})</h2>
+    <h2 id="{{ tag[0] }}">{{ tag[0] }}</h2>
     <ul>
       {% for post in tag[1] %}
         <a class="tag-post" href="{{ site.baseurl }}{{ post.url }}">
