--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,15 +3,15 @@
   <div class="wrapper">
     <h1>Contacto</h1>
     <a id="icono_github" href="https://github.com/{{ site.github_username }}">
-      <img src="/assets/icono_github.png"></img>
+      <img widht="70px" height="70px" src="/assets/icono_github.png"></img>
     </a>
 
     <a id="icono_facebook" href="https://www.facebook.com/{{ site.facebook_username }}">
-      <img src="/assets/icono_facebook.png"></img>
+      <img widht="60px" height="60px" src="/assets/icono_facebook.png"></img>
     </a>
 
     <a id="icono_instagram" href="https://www.instagram.com/{{ site.instagram_username }}">
-      <img src="/assets/icono_instagram.png"></img>
+      <img widht="60px" height="60px" src="/assets/icono_instagram.png"></img>
     </a>
   </div>
 </footer>
