--- a/_layouts/categoria.html
+++ b/_layouts/categoria.html
@@ -25,6 +25,6 @@ layout: default
     {% endfor %}
   </ul>
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+  {% include rss.html %}
 
 </div>
