--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,9 @@ layout: default
       {% endif %}
     {% endfor %}
   </ul>
-  
+
+  {% include rss.html %}
+
   {% include disqus_comments.html %}
 
 </article>
