--- a/assets/main.scss
+++ b/assets/main.scss
@@ -47,6 +47,10 @@ $on-laptop:        800px;
     margin-right: 12px;
 }
 
+#titulo_categoria {
+  font-size: 50%;
+}
+
 #lista_posts_categoria {
   margin-top: 30px;
 }
