--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,17 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-    <h1>Contacto</h1>
+    <h1 id="contacto">Contacto</h1>
     <a id="icono_github" href="https://github.com/{{ site.github_username }}">
-      <img widht="70px" height="70px" src="/assets/icono_github.png"></img>
+      <img widht="32px" height="32px" src="/img/icono_github.png"></img>
     </a>
 
     <a id="icono_facebook" href="https://www.facebook.com/{{ site.facebook_username }}">
-      <img widht="60px" height="60px" src="/assets/icono_facebook.png"></img>
+      <img widht="22px" height="22px" src="/img/icono_facebook.png"></img>
     </a>
 
     <a id="icono_instagram" href="https://www.instagram.com/{{ site.instagram_username }}">
-      <img widht="60px" height="60px" src="/assets/icono_instagram.png"></img>
+      <img widht="22px" height="22px" src="/img/icono_instagram.png"></img>
     </a>
   </div>
 </footer>
