--- a/_layouts/tag-cloud.html
+++ b/_layouts/tag-cloud.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>Tag Cloud</h1>
+<h1 class="page-heading">Tag Cloud</h1>
 
 {% comment %} Generem una variable amb tots els tags ordenats alfabèticament {% endcomment %}
 {% assign tags = site.tags | sort %}
