--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>Tags</h1>
+<h1 class="page-heading">Tags</h1>
 
 {% comment %}
   Pàgina amb els tags i el llistat de posts que els inclouen
