--- a/assets/main.scss
+++ b/assets/main.scss
@@ -38,6 +38,10 @@ $on-laptop:        800px;
 // Import partials from the `minima` theme.
 @import "minima";
 
+#separador, #lista_posts_categoria {
+  margin-top: 30px;
+}
+
 #autor_fecha_post {
   margin-left: 70%;
 }
@@ -47,12 +51,21 @@ $on-laptop:        800px;
     margin-right: 12px;
 }
 
-#titulo_categoria {
-  font-size: 50%;
+.post-title {
+  font-size: 40px;
 }
 
-#lista_posts_categoria {
-  margin-top: 30px;
+#lista-tags {
+  display: inline;
+  margin-right: 10px;
+}
+
+#titulo_post_home {
+  font-size: x-large;
+}
+
+#contacto {
+  font-size: 20px;
 }
 
 #icono_github {
