--- a/_includes/post-tags.html
+++ b/_includes/post-tags.html
@@ -6,9 +6,9 @@
 
 <h4>Tags:</h4>
 <ul class="post-tag-list">
-{% for tag in page.tags %}
-  <li>
-    <a href="/tags#{{ tag }}" class="simple-tag">{{ tag }}</a>
-  </li>
-{% endfor %}
+  {% for tag in page.tags %}
+    <li id="lista-tags">
+      <a href="/tags#{{ tag }}" class="simple-tag">{{ tag }}</a>
+    </li>
+  {% endfor %}
 </ul>
