--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,10 @@ layout: default
   </div>
   
   {% include post-tags.html %}
+  
+  {% include rss.html %}
+
+  <p id="separador">••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••</p>
 
   <h2>Últimos posts publicados</h2>
  
@@ -33,8 +37,6 @@ layout: default
       {% endif %}
     {% endfor %}
   </ul>
-
-  {% include rss.html %}
 
   {% include disqus_comments.html %}
 
